--- a/code/parent-platform/platform-web/src/main/webapp/html/system/menu/menu_index.html
+++ b/code/parent-platform/platform-web/src/main/webapp/html/system/menu/menu_index.html
@@ -4,8 +4,11 @@
 <div id="menuTableToolbar">
     <a href="javascript: void(0);" class="easyui-linkbutton" data-options="iconCls:'icon-add',plain:true">新增</a>
     <a href="javascript: void(0);" class="easyui-linkbutton" data-options="iconCls:'icon-remove',plain:true">删除</a>
-    <input id="menuSearchbox" style="width:300px" />
-    <div id="mm" style="width:150px">
-        <div data-options="name:'text',selected:true">菜单文本</div>
+    <div style="float: right;">
+        <input id="menuSearchbox" style="width:200px;" />
+        <div id="queryMenuType" style="width:100px">
+            <div data-options="name:'ALL', iconCls:'icon-ok'">所有类型</div>
+        </div>
     </div>
 </div>
+<script type="text/javascript" src="./html/system/menu/menu_index.js"></script>
