--- a/code/parent-platform/platform-web/src/main/webapp/html/system/menu/menu_index.html
+++ b/code/parent-platform/platform-web/src/main/webapp/html/system/menu/menu_index.html
@@ -20,7 +20,7 @@
                     <input class="easyui-textbox" name="code" style="width: 100%;" data-options="label:'菜单编号：',required:true,validType:{length:[1,10]}" />
                 </div>
                 <div style="margin-bottom:20px">
-                    <input class="easyui-textbox" name="menuText" style="width: 100%;" data-options="label:'菜单文本：',required:true,validType:{length:[1,10]}" />
+                    <input class="easyui-textbox" name="text" style="width: 100%;" data-options="label:'菜单文本：',required:true,validType:{length:[1,10]}" />
                 </div>
                 <div style="margin-bottom:20px">
                     <input class="easyui-textbox" name="menuUrl" style="width: 100%;" data-options="label:'菜单地址：',validType:{length:[7,255]}" />
