--- a/code/parent-platform/platform-web/src/main/webapp/html/system/menu/menu_index.html
+++ b/code/parent-platform/platform-web/src/main/webapp/html/system/menu/menu_index.html
@@ -2,11 +2,13 @@
 <meta charset="UTF-8">
 <div class="easyui-layout" data-options="fit:true">
     <div data-options="region:'north',title:'高级查询',split:true,collapsed:true" style="height:100px;"></div>
-    <div data-options="region:'west',title:'菜单树',split:true" style="width:200px;"></div>
+    <div data-options="region:'west',title:'菜单树',split:true" style="width:200px;">
+        <ul id="menuTree"></ul>
+    </div>
     <div data-options="region:'center'">
         <div class="easyui-layout" data-options="fit:true">
             <div data-options="region:'north'">
-                <div id="menuTableToolbar">
+                <div id="menuGridToolbar">
                     <a id="btnMenuAdd" class="easyui-linkbutton" data-options="iconCls:'icon-add',plain:true" href="javascript: void(0);">新增</a>
                     <a id="btnMenuDel" class="easyui-linkbutton" data-options="iconCls:'icon-remove',plain:true" href="javascript: void(0);">删除</a>
                     <div style="float: right;">
@@ -18,40 +20,48 @@
                 </div>
             </div>
             <div data-options="region:'center'">
-                <table id="menuTable" ></table>
+                <table id="menuGrid" ></table>
             </div>
         </div>
     </div>
 </div>
-<div id="menuWindow">
-    <div id="detailLayout" class="easyui-layout" data-options="fit:true">
-        <div data-options="region:'center',border:false" style="padding:10px;">
-            <form id="menuForm" class="easyui-form" method="post">
-                <input type="hidden" name="id" />
-                <div style="margin-bottom:20px">
-                    <input class="easyui-textbox" name="code" style="width: 100%;" data-options="label:'菜单编号：',required:true,validType:{length:[1,20]}" />
-                </div>
-                <div style="margin-bottom:20px">
-                    <input class="easyui-textbox" name="text" style="width: 100%;" data-options="label:'菜单文本：',required:true,validType:{length:[1,20]}" />
-                </div>
-                <div style="margin-bottom:20px">
-                    <input class="easyui-textbox" name="menuUrl" style="width: 100%;" data-options="label:'菜单地址：',validType:{length:[7,255]}" />
-                </div>
-                <div style="margin-bottom:20px">
-                    <input name="menuType" style="width: 100%;" />
-                </div>
-                <div style="margin-bottom:20px">
-                    <input class="easyui-textbox" name="parentId" style="width: 100%;" data-options="label:'上级菜单：'" />
-                </div>
-                <div style="margin-bottom:20px">
-                    <input class="easyui-numberbox" name="orderNum" style="width: 100%;" data-options="label:'排序号：',min:1,max:999," />
-                </div>
-            </form>
-        </div>
-        <div data-options="region:'south',border:false" style="text-align: center;">
-            <a id="btnMenuFormSave" class="easyui-linkbutton" data-options="iconCls:'icon-ok'" href="javascript: void(0)" style="width: 80px">保存</a>
-            <a id="btnMenuFormCancel"  class="easyui-linkbutton" data-options="iconCls:'icon-clear'" href="javascript: void(0)" style="width: 80px">关闭</a>
-        </div>
-    </div>
+<div id="menu_dialog">
+    <form id="menuForm" method="post" style="width: 350px;">
+        <input type="hidden" name="id" />
+        <table align="center">
+            <tr>
+                <th align="right">菜单编号：</th>
+                <td align="left">
+                    <input name="code" style="width: 200px;" />
+                </td>
+            </tr>
+            <tr>
+                <th align="right">菜单文本：</th>
+                <td align="left">
+                    <input class="easyui-textbox" name="text" data-options="required:true,validType:['length[1,20]','illeChar'],validateOnCreate:false,validateOnBlur:true" style="width: 200px;" />
+                </td>
+            </tr>
+            <tr>
+                <th align="right">菜单地址：</th>
+                <td align="left">
+                    <input class="easyui-textbox" name="menuUrl" data-options="validType:['length[1,200]','illeChar'],validateOnCreate:false,validateOnBlur:true" style="width: 200px;" />
+                </td>
+            </tr>
+            <tr>
+                <th align="right">菜单类型：</th>
+                <td align="left"><input name="menuType" style="width: 200px;" /></td>
+            </tr>
+            <tr>
+                <th align="right">上级菜单：</th>
+                <td align="left"><input name="parentId" style="width: 200px;" /></td>
+            </tr>
+            <tr>
+                <th align="right">排序号：</th>
+                <td align="left">
+                    <input class="easyui-numberbox" name="orderNum" data-options="min:1,max:999,validType:['length[1,3]','integer'],validateOnCreate:false,validateOnBlur:true" style="width: 100px;" />
+                </td>
+            </tr>
+        </table>
+    </form>
 </div>
 <script type="text/javascript" src="./html/system/menu/menu_index.js"></script>
