--- a/code/parent-platform/platform-web/src/main/webapp/html/header.html
+++ b/code/parent-platform/platform-web/src/main/webapp/html/header.html
@@ -1,9 +1,6 @@
 <div style="width: 216px;height: 63px;;position: absolute;bottom: 0px;left: 0px;background-image: url(./static/img/logo.png);">
 </div>
-<div id="navigationBar" style="display: none;position: absolute;bottom: 0px;right: 70px;text-align: right;">
-    <!-- <a href="javascript: void(0);" class="easyui-linkbutton" data-options="size:'large',iconAlign:'top',plain:true" onclick="javascript: engine.logged();">首页</a>
-    <a href="javascript: void(0);" class="easyui-linkbutton" data-options="size:'large',iconAlign:'top',plain:true" onclick="javascript: engine.loadSystem('./html/system/index.html', '系统管理', 'abcde');">系统管理</a> -->
-</div>
+<div id="navigationBar" style="display: none;position: absolute;bottom: 0px;right: 70px;text-align: right;"></div>
 <div id="sessionUserInfo" style="display: none;position: absolute;bottom: 0px;right: 0px;">
     <a id="btnUserName" href="javascript: void(0);"></a>
     <div id="userMenus" style="width:100px;">
