--- a/code/parent-platform/platform-web/src/main/webapp/html/menus.html
+++ b/code/parent-platform/platform-web/src/main/webapp/html/menus.html
@@ -1,17 +1,4 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<div id="menubar" class="easyui-accordion">
-<!-- 
-    <div title="系统设置" style="overflow:auto;padding:10px;">
-        <a href="javascript: void(0);" class="easyui-linkbutton" data-options="plain:true,size:'large'" style="width: 100%">数据字典管理</a>
-        <a href="javascript: void(0);" class="easyui-linkbutton" data-options="plain:true,size:'large'" style="width: 100%">站点管理</a>
-        <a href="javascript: void(0);" class="easyui-linkbutton" data-options="plain:true,size:'large'" style="width: 100%">菜单管理</a>
-    </div>
-    <div title="系统安全" style="overflow:auto;padding:10px;">
-        <a href="javascript: void(0);" class="easyui-linkbutton" data-options="plain:true,size:'large'" style="width: 100%">权限管理</a>
-        <a href="javascript: void(0);" class="easyui-linkbutton" data-options="plain:true,size:'large'" style="width: 100%">角色管理</a>
-        <a href="javascript: void(0);" class="easyui-linkbutton" data-options="plain:true,size:'large'" style="width: 100%">用户管理</a>
-    </div>
- -->
-</div>
+<div id="menubar" class="easyui-accordion"></div>
 <script type="text/javascript" src="./html/menus.js"></script>
