站点管理、当前用户信息类属性调整

--- a/code/platform-parent/platform-web/src/main/webapp/html/header.html
+++ b/code/platform-parent/platform-web/src/main/webapp/html/header.html
@@ -1,9 +1,9 @@
 <div style="width: 216px;height: 63px;;position: absolute;bottom: 0px;left: 0px;background-image: url(./static/img/logo.png);">
 </div>
-<div id="navigationBar" style="display: none;position: absolute;bottom: 0px;right: 70px;text-align: right;"></div>
-<div id="sessionUserInfo" style="display: none;position: absolute;bottom: 0px;right: 0px;">
+<div id="navigationBar" style="display: none;position: absolute;bottom: 0px;right: 120px;text-align: right;"></div>
+<div id="sessionUserInfo" style="display: none;position: absolute;bottom: 0px;right: 20px;">
     <a id="btnUserName" href="javascript: void(0);"></a>
-    <div id="userMenus" style="width:100px;">
+    <div id="userMenus">
         <div id="menuPersonal" data-options="iconCls:'icon-man'">个人中心</div>
         <div id="menuLogout" data-options="iconCls:'icon-cancel'">退出登录</div>
         <div id="menuAbout" data-options="iconCls:'icon-tip'">关于我们</div>
