--- a/code/flyhaze-platform/platform-web/src/main/webapp/html/system/menu/menu_detail.html
+++ b/code/flyhaze-platform/platform-web/src/main/webapp/html/system/menu/menu_detail.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
 <div data-options="region:'center',fit:true">
-    <form id="menuForm" method="post" style="width: 350px;">
+    <form id="menuForm" method="post">
         <input type="hidden" name="id" />
         <table align="center">
             <tr>
                 <th align="right">菜单编号：</th>
                 <td align="left">
-                    <input class="easyui-textbox" name="code" data-options="required:true,validType:['length[1,20]','illeChar'],validateOnCreate:false,validateOnBlur:true" style="width: 200px;" />
+                    <input class="easyui-textbox" id="code" name="code" data-options="required:true,validType:['length[1,20]','illeChar'],validateOnCreate:false,validateOnBlur:true" style="width: 200px;" />
                 </td>
             </tr>
             <tr>
                 <th align="right">菜单文本：</th>
                 <td align="left">
-                    <input class="easyui-textbox" name="text" data-options="required:true,validType:['length[1,20]','illeChar'],validateOnCreate:false,validateOnBlur:true" style="width: 200px;" />
+                    <input class="easyui-textbox" id="text" name="text" data-options="required:true,validType:['length[1,20]','illeChar'],validateOnCreate:false,validateOnBlur:true" style="width: 200px;" />
                 </td>
             </tr>
             <tr>
                 <th align="right">菜单地址：</th>
                 <td align="left">
-                    <input class="easyui-textbox" name="menuUrl" data-options="validType:['length[1,200]','illeChar'],validateOnCreate:false,validateOnBlur:true" style="width: 200px;" />
+                    <input class="easyui-textbox" id="menuUrl" name="menuUrl" data-options="validType:['length[1,200]','illeChar'],validateOnCreate:false,validateOnBlur:true" style="width: 200px;" />
                 </td>
             </tr>
             <tr>
                 <th align="right">菜单类型：</th>
-                <td align="left"><input name="menuType" style="width: 200px;" /></td>
+                <td align="left"><select name="menuType" style="width: 200px;"></select></td>
             </tr>
             <tr>
                 <th align="right">分系统：</th>
-                <td align="left"><input name="subSystem" style="width: 200px;" /></td>
+                <td align="left"><select name="subSystem" style="width: 200px;"></select></td>
             </tr>
             <tr>
                 <th align="right">上级菜单：</th>
-                <td align="left"><input name="parentId" style="width: 200px;" /></td>
+                <td align="left"><select name="parentId" style="width: 200px;"></select></td>
             </tr>
             <tr>
                 <th align="right">排序号：</th>
                 <td align="left">
-                    <input class="easyui-numberbox" name="orderNum" data-options="required:true,min:1,max:999,validType:['length[1,3]','integer'],validateOnCreate:false,validateOnBlur:true" style="width: 100px;" />
+                    <input class="easyui-numberbox" id="orderNum" name="orderNum" data-options="required:true,min:1,max:999,validType:['length[1,3]','integer'],validateOnCreate:false,validateOnBlur:true" style="width: 100px;" />
+                </td>
+            </tr>
+            <tr>
+                <th align="right">备注：</th>
+                <td align="left">
+                    <textarea class="easyui-textbox" id="remark" name="remark" data-options="multiline:true,validType:['length[1,200]','illeChar'],validateOnCreate:false,validateOnBlur:true" style="width: 200px;"></textarea>
                 </td>
             </tr>
         </table>
